--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "axios": "^1.5.1",
     "expo": "~52.0.37",
     "expo-blur": "~14.0.3",
+    "expo-cli": "^6.3.10",
     "expo-constants": "~17.0.7",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
@@ -44,9 +46,10 @@
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.4",
+    "jest-expo": "^52.0.4",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
